website/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: website
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: changesite
  namespace: website
spec:
  redirectRegex:
    regex: "^https?://www\\.sachiniyer\\.com(/.*)?"
    replacement: "https://sachiniyer.com$1"
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysite-ingress
  namespace: website
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: website-redirect@kubernetescrd,website-changesite@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: sachiniyer.com
      http:
        paths:
          - path: /sync
            pathType: Prefix
            backend:
              service:
                name: mysite-service
                port:
                  number: 90
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysite-service
                port:
                  number: 80
    - host: www.sachiniyer.com
      http:
        paths:
          - path: /sync
            pathType: Prefix
            backend:
              service:
                name: mysite-service
                port:
                  number: 90
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysite-service
                port:
                  number: 80
  tls:
    - secretName: website-cert
